Bug 290960 - printing: Does not scale as size as in preview
Summary: printing: Does not scale as size as in preview
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Ubuntu Linux
: VLO normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 350922 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-01-08 11:52 UTC by Pascal d'Hermilly
Modified: 2016-03-31 17:50 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Pascal d'Hermilly 2012-01-08 11:52:01 UTC
Version:           2.4-snapshots (using Devel) 
OS:                Linux

Krita 2.4 beta 5
Have 1600x1200 landscape,
The print preview looks fine but when it is printed only half comes out in portrait mode.
Due to the following workaround I think that Krita is not correctly speaking to the printsystem.
Workaround: Printing to PDF works as expected. Printing the pdf from okular gives you a correctly scaled print on paper. 

Reproducible: Always

Steps to Reproduce:
new white 1600x1200.
Paint something in each side of the painting
File->print preview
Look at scaled print. 
print to a printer.

Actual Results:  
only prints left side.

Expected Results:  
print looks like preview.

OS: Linux (x86_64) release 3.0.0-14-generic
Compiler: gcc
Comment 1 Halla Rempt 2012-01-21 11:02:41 UTC
Yes, our printing code is pretty much unfinished. Maybe we should remove the menu entry for the 2.4 release...
Comment 2 Sven Langkamp 2012-02-19 16:14:37 UTC
The problem is that the application doesn't know if we are printing to a printer or a file.

There was another bug report about this that wanted to have the pdf to have the original size of the image. So I changed that to scale the page size to the image. Of course that cause another problem when printing and the image is bigger than the page.
Comment 3 Dmitry Kazakov 2015-06-21 10:34:01 UTC
Confirmed. In "Print Preview" the image is cropped. When printed to a PDF file, the image is scaled to the entire file
Comment 4 Halla Rempt 2015-08-06 14:18:37 UTC
*** Bug 350922 has been marked as a duplicate of this bug. ***
Comment 5 Halla Rempt 2016-03-31 17:50:50 UTC
Git commit 71f6ce6efeab7254cda018c0d9621d55ce246f23 by Boudewijn Rempt.
Committed on 31/03/2016 at 17:35.
Pushed by rempt into branch 'master'.

Hide the print and print preview action

We do not properly support printing at the moment, at all. There is
no color management, no scaling, no pagination, nothing. We even
print by converting to a QImage first.

M  +2    -2    krita/krita.xmlgui
M  +8    -8    libs/ui/KisMainWindow.cpp

http://commits.kde.org/krita/71f6ce6efeab7254cda018c0d9621d55ce246f23