Hide the print and print preview action

We do not properly support printing at the moment, at all. There is
no color management, no scaling, no pagination, nothing. We even
print by converting to a QImage first.

BUG:290960